Fixed <main> container CSS across app
Bugfix: <main> tags had "display: flex" on them, which caused "overflow-y: auto" not to work as intended. Scrollbars now work across main views. (GameComponent still bugged.)

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -1,5 +1,4 @@
 main {
-  display: flex;
   height: 100%;
   padding: 2rem;
   color: white;
@@ -30,7 +29,7 @@ h1 {
 
 .column {
   /* Figure out what's wrong here */
-  height: 40%;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
 }
