--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -1,12 +1,12 @@
 /* Making main a flexbox works for making content flex properly, BUT */
 /* The subcomponents, when overflowed, are not recognized by main */
 main {
-  display: flex;
   flex-direction: column;
   height: 100%;
   padding: 2rem;
   background-color: black;
   color: white;
+  overflow-y: auto;
   border-left: 5px solid;
   border-right: 5px solid;
 }
